--- a/examples/sample1.jrxml
+++ b/examples/sample1.jrxml
@@ -1,10 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.18.1.final using JasperReports Library version 6.18.1-9d75d1969e774d4f179fb3be8401e98a0e6d1611  -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Blank_A4" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="0c331c9d-0ae8-4a8e-baa8-8247154e7f21">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Blank_A4" language="groovy" pageWidth="595" pageHeight="842" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="0c331c9d-0ae8-4a8e-baa8-8247154e7f21">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="postgres"/>
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
+	<property name="com.jaspersoft.studio.unit." value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.pageHeight" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.pageWidth" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.topMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.bottomMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.leftMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.rightMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.columnWidth" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.columnSpacing" value="pixel"/>
+	<parameter name="para1" class="java.lang.String" isForPrompting="false">
+		<defaultValueExpression><![CDATA["0"]]></defaultValueExpression>
+	</parameter>
+	<parameter name="para2" class="java.lang.String" isForPrompting="false">
+		<defaultValueExpression><![CDATA[0]]></defaultValueExpression>
+	</parameter>
 	<queryString>
-		<![CDATA[select * from global_user ]]>
+		<![CDATA[select * from global_user  order by gender]]>
 	</queryString>
 	<field name="created" class="java.sql.Timestamp">
 		<property name="com.jaspersoft.studio.field.name" value="created"/>
@@ -26,12 +41,12 @@
 		<property name="com.jaspersoft.studio.field.label" value="globaluser_id"/>
 		<property name="com.jaspersoft.studio.field.tree.path" value="global_user"/>
 	</field>
-	<field name="fullname" class="byte[]">
+	<field name="fullname" class="java.lang.String">
 		<property name="com.jaspersoft.studio.field.name" value="fullname"/>
 		<property name="com.jaspersoft.studio.field.label" value="fullname"/>
 		<property name="com.jaspersoft.studio.field.tree.path" value="global_user"/>
 	</field>
-	<field name="email" class="byte[]">
+	<field name="email" class="java.lang.String">
 		<property name="com.jaspersoft.studio.field.name" value="email"/>
 		<property name="com.jaspersoft.studio.field.label" value="email"/>
 		<property name="com.jaspersoft.studio.field.tree.path" value="global_user"/>
@@ -51,6 +66,30 @@
 		<property name="com.jaspersoft.studio.field.label" value="updatedby"/>
 		<property name="com.jaspersoft.studio.field.tree.path" value="global_user"/>
 	</field>
+	<variable name="countbygroup" class="java.lang.String" resetType="Group" resetGroup="group_gender" incrementType="Report" calculation="Sum">
+		<variableDescription><![CDATA[default var 1]]></variableDescription>
+		<variableExpression><![CDATA[$F{globaluser_id}]]></variableExpression>
+		<initialValueExpression><![CDATA[0]]></initialValueExpression>
+	</variable>
+	<variable name="sumbygroup1" class="java.lang.Double" resetType="Group" resetGroup="group_gender" calculation="Sum">
+		<variableExpression><![CDATA[$F{globaluser_id}]]></variableExpression>
+	</variable>
+	<group name="group_gender">
+		<groupExpression><![CDATA[$F{gender}]]></groupExpression>
+		<groupHeader>
+			<band height="30">
+				<textField>
+					<reportElement x="0" y="0" width="100" height="30" uuid="f6b17faa-51cf-4adc-bd5a-c899b5202bab">
+						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="66ad1ad8-d9d2-433e-826f-6f4f76779b6c"/>
+					</reportElement>
+					<textFieldExpression><![CDATA[$F{gender}]]></textFieldExpression>
+				</textField>
+			</band>
+		</groupHeader>
+		<groupFooter>
+			<band height="32"/>
+		</groupFooter>
+	</group>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
@@ -58,95 +97,94 @@
 		<band splitType="Stretch"/>
 	</title>
 	<pageHeader>
-		<band height="111" splitType="Stretch">
-			<line>
-				<reportElement x="10" y="10" width="228" height="47" forecolor="#D60804" uuid="fd6a86ed-a6c8-4855-bef5-2502d1470a30"/>
-			</line>
+		<band height="50" splitType="Stretch">
 			<ellipse>
-				<reportElement x="250" y="8" width="100" height="50" forecolor="#527D55" backcolor="#C72E2C" uuid="d6b35ff4-74e8-4ba3-9c9a-56a1d88a396e"/>
-			</ellipse>
-			<rectangle>
-				<reportElement x="400" y="10" width="100" height="50" forecolor="#3305FF" backcolor="#FFF717" uuid="24f362f6-6493-4b32-b4a7-473273486d70"/>
-			</rectangle>
-			<rectangle>
-				<reportElement x="450" y="20" width="100" height="50" forecolor="#3305FF" backcolor="#FFFFFF" uuid="b091c919-7be3-4cad-88a0-c283c381b1e2"/>
-			</rectangle>
-			<ellipse>
-				<reportElement mode="Transparent" x="280" y="40" width="100" height="50" uuid="90b03e15-a962-4230-adfb-29476067f50c"/>
+				<reportElement x="450" y="0" width="100" height="50" forecolor="#527D55" backcolor="#C72E2C" uuid="d6b35ff4-74e8-4ba3-9c9a-56a1d88a396e"/>
 			</ellipse>
 		</band>
 	</pageHeader>
 	<columnHeader>
-		<band height="61" splitType="Stretch">
+		<band height="30" splitType="Stretch">
 			<staticText>
-				<reportElement x="0" y="0" width="100" height="30" forecolor="#0905FF" uuid="fc2a44b0-03c1-4e18-b22c-e76e5bfcd4c4">
-					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="4bc22dd9-cb7d-454d-b1fb-c460cd89c5dc"/>
+				<reportElement x="0" y="0" width="180" height="30" uuid="2ba4c8c3-a6a3-4950-a514-84d4e18121f0">
+					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="27099c1a-9e7a-428c-b6b5-08089d969a26"/>
 				</reportElement>
-				<box topPadding="1" leftPadding="0" bottomPadding="1"/>
-				<textElement>
-					<font isItalic="true"/>
-				</textElement>
-				<text><![CDATA[globaluser_id]]></text>
-			</staticText>
-			<staticText>
-				<reportElement mode="Opaque" x="100" y="0" width="100" height="30" forecolor="#1B5E3B" backcolor="#FF0ACA" uuid="655b057b-8172-4a96-a7de-6354e4c781a6">
-					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="e695d16c-8fae-4b33-9c24-0c2f2926eb3a"/>
-				</reportElement>
-				<box topPadding="1" bottomPadding="1"/>
-				<textElement>
-					<font isBold="true"/>
-				</textElement>
 				<text><![CDATA[fullname]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="200" y="0" width="100" height="30" uuid="11ff09e5-ddd5-41d8-9c15-3df10ec9f941">
-					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="f188210d-9244-4ef2-8a52-339c5f95b8b4"/>
+				<reportElement x="180" y="0" width="200" height="30" uuid="fe4c0323-df1e-4e07-b11b-e90f9a973a9c">
+					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="33f4755b-fdc2-4aa4-9d7e-f3b15924ae5d"/>
 				</reportElement>
-				<text><![CDATA[gender]]></text>
+				<text><![CDATA[email]]></text>
 			</staticText>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="65" splitType="Stretch">
+		<band height="30" splitType="Stretch">
 			<textField>
-				<reportElement x="0" y="0" width="100" height="30" uuid="d6ecf40c-8440-45ce-975d-945a80e53d73">
-					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="4bc22dd9-cb7d-454d-b1fb-c460cd89c5dc"/>
+				<reportElement x="0" y="0" width="180" height="30" uuid="20575db6-8e58-435e-be0a-075e229f484a">
+					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="27099c1a-9e7a-428c-b6b5-08089d969a26"/>
 				</reportElement>
-				<box leftPadding="0"/>
-				<textElement>
-					<font isItalic="true"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{globaluser_id}]]></textFieldExpression>
-			</textField>
-			<ellipse>
-				<reportElement x="444" y="0" width="100" height="50" uuid="5fa25d89-6229-474f-aa8a-7dd93bb91964"/>
-			</ellipse>
-		</band>
-		<band height="30">
-			<textField>
-				<reportElement x="100" y="0" width="100" height="30" uuid="e9cfdda4-2196-4a49-96ba-e3a039213c4c">
-					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="e695d16c-8fae-4b33-9c24-0c2f2926eb3a"/>
-				</reportElement>
-				<textElement textAlignment="Right"/>
 				<textFieldExpression><![CDATA[$F{fullname}]]></textFieldExpression>
 			</textField>
-		</band>
-		<band height="31">
 			<textField>
-				<reportElement x="203" y="1" width="100" height="30" uuid="30a49e67-8d62-45e2-af0d-5fdff9e76b91">
-					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="f188210d-9244-4ef2-8a52-339c5f95b8b4"/>
+				<reportElement x="180" y="0" width="200" height="30" uuid="5f05173d-f894-4470-a776-e91ee8d2684c">
+					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="33f4755b-fdc2-4aa4-9d7e-f3b15924ae5d"/>
 				</reportElement>
-				<textFieldExpression><![CDATA[$F{gender}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{email}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="380" y="0" width="60" height="30" uuid="f8f5d37d-bd77-42b1-8b72-c23e990d5cf9"/>
+				<textFieldExpression><![CDATA[$V{REPORT_COUNT}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="440" y="0" width="100" height="30" uuid="3e95a70f-6a41-40d1-99b9-1f34235d0cc9"/>
+				<textFieldExpression><![CDATA[$V{group_gender_COUNT}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
 	<columnFooter>
-		<band height="45" splitType="Stretch"/>
+		<band height="63" splitType="Stretch"/>
 	</columnFooter>
 	<pageFooter>
-		<band height="54" splitType="Stretch"/>
+		<band height="86" splitType="Stretch">
+			<textField>
+				<reportElement x="0" y="0" width="100" height="30" uuid="16cac36c-c880-4df1-906d-888e5701600e"/>
+				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="120" y="0" width="100" height="30" uuid="66cd6151-ee28-41af-8df8-8950612bd19e"/>
+				<textFieldExpression><![CDATA[$V{PAGE_COUNT}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="360" y="0" width="190" height="30" uuid="b4a15385-661c-4d05-9d2f-c5b0c46e0e11"/>
+				<text><![CDATA[continue next page...]]></text>
+			</staticText>
+			<ellipse>
+				<reportElement x="220" y="0" width="100" height="60" uuid="12d7470a-738d-4ab3-b9c2-eee7dcb2422a"/>
+			</ellipse>
+		</band>
 	</pageFooter>
+	<lastPageFooter>
+		<band height="50">
+			<textField>
+				<reportElement x="0" y="0" width="100" height="30" uuid="6b1734b1-e440-4300-acf0-9b8e405cbd61"/>
+				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="100" y="20" width="100" height="30" uuid="5d5f6fac-87e5-4581-bbed-933976b5dec4"/>
+				<textFieldExpression><![CDATA[$V{PAGE_COUNT}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="360" y="0" width="190" height="30" uuid="a0ac18f7-82bb-47ec-a43c-491e09a7d1da"/>
+				<text><![CDATA[end report]]></text>
+			</staticText>
+			<rectangle>
+				<reportElement x="260" y="0" width="40" height="50" uuid="3d877670-a31d-4d29-a5b6-56cffaa045f3"/>
+			</rectangle>
+		</band>
+	</lastPageFooter>
 	<summary>
-		<band height="42" splitType="Stretch"/>
+		<band height="27" splitType="Stretch"/>
 	</summary>
 </jasperReport>
