--- a/examples/sample1.jrxml
+++ b/examples/sample1.jrxml
@@ -12,14 +12,8 @@
 	<property name="com.jaspersoft.studio.unit.rightMargin" value="pixel"/>
 	<property name="com.jaspersoft.studio.unit.columnWidth" value="pixel"/>
 	<property name="com.jaspersoft.studio.unit.columnSpacing" value="pixel"/>
-	<parameter name="para1" class="java.lang.String" isForPrompting="false">
-		<defaultValueExpression><![CDATA["0"]]></defaultValueExpression>
-	</parameter>
-	<parameter name="para2" class="java.lang.String" isForPrompting="false">
-		<defaultValueExpression><![CDATA[0]]></defaultValueExpression>
-	</parameter>
 	<queryString>
-		<![CDATA[select * from global_user  order by gender]]>
+		<![CDATA[select * from global_user  order by gender, country_code]]>
 	</queryString>
 	<field name="created" class="java.sql.Timestamp">
 		<property name="com.jaspersoft.studio.field.name" value="created"/>
@@ -66,30 +60,11 @@
 		<property name="com.jaspersoft.studio.field.label" value="updatedby"/>
 		<property name="com.jaspersoft.studio.field.tree.path" value="global_user"/>
 	</field>
-	<variable name="countbygroup" class="java.lang.String" resetType="Group" resetGroup="group_gender" incrementType="Report" calculation="Sum">
-		<variableDescription><![CDATA[default var 1]]></variableDescription>
-		<variableExpression><![CDATA[$F{globaluser_id}]]></variableExpression>
-		<initialValueExpression><![CDATA[0]]></initialValueExpression>
-	</variable>
-	<variable name="sumbygroup1" class="java.lang.Double" resetType="Group" resetGroup="group_gender" calculation="Sum">
-		<variableExpression><![CDATA[$F{globaluser_id}]]></variableExpression>
-	</variable>
-	<group name="group_gender">
-		<groupExpression><![CDATA[$F{gender}]]></groupExpression>
-		<groupHeader>
-			<band height="30">
-				<textField>
-					<reportElement x="0" y="0" width="100" height="30" uuid="f6b17faa-51cf-4adc-bd5a-c899b5202bab">
-						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="66ad1ad8-d9d2-433e-826f-6f4f76779b6c"/>
-					</reportElement>
-					<textFieldExpression><![CDATA[$F{gender}]]></textFieldExpression>
-				</textField>
-			</band>
-		</groupHeader>
-		<groupFooter>
-			<band height="32"/>
-		</groupFooter>
-	</group>
+	<field name="country_code" class="java.lang.String">
+		<property name="com.jaspersoft.studio.field.name" value="country_code"/>
+		<property name="com.jaspersoft.studio.field.label" value="country_code"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="global_user"/>
+	</field>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
@@ -97,92 +72,22 @@
 		<band splitType="Stretch"/>
 	</title>
 	<pageHeader>
-		<band height="50" splitType="Stretch">
-			<ellipse>
-				<reportElement x="450" y="0" width="100" height="50" forecolor="#527D55" backcolor="#C72E2C" uuid="d6b35ff4-74e8-4ba3-9c9a-56a1d88a396e"/>
-			</ellipse>
-		</band>
+		<band height="58" splitType="Stretch"/>
 	</pageHeader>
 	<columnHeader>
-		<band height="30" splitType="Stretch">
-			<staticText>
-				<reportElement x="0" y="0" width="180" height="30" uuid="2ba4c8c3-a6a3-4950-a514-84d4e18121f0">
-					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="27099c1a-9e7a-428c-b6b5-08089d969a26"/>
-				</reportElement>
-				<text><![CDATA[fullname]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="180" y="0" width="200" height="30" uuid="fe4c0323-df1e-4e07-b11b-e90f9a973a9c">
-					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="33f4755b-fdc2-4aa4-9d7e-f3b15924ae5d"/>
-				</reportElement>
-				<text><![CDATA[email]]></text>
-			</staticText>
-		</band>
+		<band height="40" splitType="Stretch"/>
 	</columnHeader>
 	<detail>
-		<band height="30" splitType="Stretch">
-			<textField>
-				<reportElement x="0" y="0" width="180" height="30" uuid="20575db6-8e58-435e-be0a-075e229f484a">
-					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="27099c1a-9e7a-428c-b6b5-08089d969a26"/>
-				</reportElement>
-				<textFieldExpression><![CDATA[$F{fullname}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="180" y="0" width="200" height="30" uuid="5f05173d-f894-4470-a776-e91ee8d2684c">
-					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="33f4755b-fdc2-4aa4-9d7e-f3b15924ae5d"/>
-				</reportElement>
-				<textFieldExpression><![CDATA[$F{email}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="380" y="0" width="60" height="30" uuid="f8f5d37d-bd77-42b1-8b72-c23e990d5cf9"/>
-				<textFieldExpression><![CDATA[$V{REPORT_COUNT}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="440" y="0" width="100" height="30" uuid="3e95a70f-6a41-40d1-99b9-1f34235d0cc9"/>
-				<textFieldExpression><![CDATA[$V{group_gender_COUNT}]]></textFieldExpression>
-			</textField>
-		</band>
+		<band height="43" splitType="Stretch"/>
 	</detail>
 	<columnFooter>
 		<band height="63" splitType="Stretch"/>
 	</columnFooter>
 	<pageFooter>
-		<band height="86" splitType="Stretch">
-			<textField>
-				<reportElement x="0" y="0" width="100" height="30" uuid="16cac36c-c880-4df1-906d-888e5701600e"/>
-				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="120" y="0" width="100" height="30" uuid="66cd6151-ee28-41af-8df8-8950612bd19e"/>
-				<textFieldExpression><![CDATA[$V{PAGE_COUNT}]]></textFieldExpression>
-			</textField>
-			<staticText>
-				<reportElement x="360" y="0" width="190" height="30" uuid="b4a15385-661c-4d05-9d2f-c5b0c46e0e11"/>
-				<text><![CDATA[continue next page...]]></text>
-			</staticText>
-			<ellipse>
-				<reportElement x="220" y="0" width="100" height="60" uuid="12d7470a-738d-4ab3-b9c2-eee7dcb2422a"/>
-			</ellipse>
-		</band>
+		<band height="86" splitType="Stretch"/>
 	</pageFooter>
 	<lastPageFooter>
-		<band height="50">
-			<textField>
-				<reportElement x="0" y="0" width="100" height="30" uuid="6b1734b1-e440-4300-acf0-9b8e405cbd61"/>
-				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="100" y="20" width="100" height="30" uuid="5d5f6fac-87e5-4581-bbed-933976b5dec4"/>
-				<textFieldExpression><![CDATA[$V{PAGE_COUNT}]]></textFieldExpression>
-			</textField>
-			<staticText>
-				<reportElement x="360" y="0" width="190" height="30" uuid="a0ac18f7-82bb-47ec-a43c-491e09a7d1da"/>
-				<text><![CDATA[end report]]></text>
-			</staticText>
-			<rectangle>
-				<reportElement x="260" y="0" width="40" height="50" uuid="3d877670-a31d-4d29-a5b6-56cffaa045f3"/>
-			</rectangle>
-		</band>
+		<band height="56"/>
 	</lastPageFooter>
 	<summary>
 		<band height="27" splitType="Stretch"/>
