--- a/examples/example1.jrxml
+++ b/examples/example1.jrxml
@@ -1,17 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.18.1.final using JasperReports Library version 6.18.1-9d75d1969e774d4f179fb3be8401e98a0e6d1611  -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="example1" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="51adeca7-9f15-46d6-b157-714028ffc1e5">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="example1" columnCount="3" pageWidth="595" pageHeight="842" columnWidth="185" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="51adeca7-9f15-46d6-b157-714028ffc1e5">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="postgres"/>
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
-	<property name="com.jaspersoft.studio.unit." value="pixel"/>
-	<property name="com.jaspersoft.studio.unit.pageHeight" value="pixel"/>
-	<property name="com.jaspersoft.studio.unit.pageWidth" value="pixel"/>
-	<property name="com.jaspersoft.studio.unit.topMargin" value="pixel"/>
-	<property name="com.jaspersoft.studio.unit.bottomMargin" value="pixel"/>
-	<property name="com.jaspersoft.studio.unit.leftMargin" value="pixel"/>
-	<property name="com.jaspersoft.studio.unit.rightMargin" value="pixel"/>
-	<property name="com.jaspersoft.studio.unit.columnWidth" value="pixel"/>
-	<property name="com.jaspersoft.studio.unit.columnSpacing" value="pixel"/>
 	<queryString>
 		<![CDATA[select * from global_user order by country_code, gender]]>
 	</queryString>
@@ -65,7 +56,7 @@
 		<property name="com.jaspersoft.studio.field.label" value="country_code"/>
 		<property name="com.jaspersoft.studio.field.tree.path" value="global_user"/>
 	</field>
-	<group name="groupcountry_code" isReprintHeaderOnEachPage="true">
+	<group name="groupcountry_code">
 		<groupExpression><![CDATA[$F{country_code}]]></groupExpression>
 		<groupHeader>
 			<band height="30">
@@ -78,18 +69,18 @@
 		<groupFooter>
 			<band height="50">
 				<textField>
-					<reportElement x="0" y="0" width="100" height="30" uuid="85554e7c-b59b-4bf7-9e7c-f9d5b41475be"/>
+					<reportElement x="40" y="0" width="100" height="30" uuid="85554e7c-b59b-4bf7-9e7c-f9d5b41475be"/>
 					<textFieldExpression><![CDATA["end"+$F{country_code}]]></textFieldExpression>
 				</textField>
 			</band>
 		</groupFooter>
 	</group>
-	<group name="group_gender" isReprintHeaderOnEachPage="true">
+	<group name="group_gender">
 		<groupExpression><![CDATA[$F{gender}]]></groupExpression>
 		<groupHeader>
 			<band height="40">
 				<textField>
-					<reportElement x="124" y="10" width="100" height="30" uuid="f8924907-c299-4abb-b447-dbc47184f846"/>
+					<reportElement x="30" y="0" width="100" height="30" uuid="f8924907-c299-4abb-b447-dbc47184f846"/>
 					<textFieldExpression><![CDATA[$F{gender}]]></textFieldExpression>
 				</textField>
 			</band>
@@ -97,14 +88,18 @@
 		<groupFooter>
 			<band height="50">
 				<textField>
-					<reportElement x="124" y="10" width="100" height="30" uuid="df613656-f6ba-4860-9085-abe7165cb383"/>
+					<reportElement x="40" y="0" width="100" height="30" uuid="df613656-f6ba-4860-9085-abe7165cb383"/>
 					<textFieldExpression><![CDATA["end "+$F{gender}]]></textFieldExpression>
 				</textField>
 			</band>
 		</groupFooter>
 	</group>
 	<background>
-		<band splitType="Stretch"/>
+		<band height="802" splitType="Stretch">
+			<rectangle>
+				<reportElement x="60" y="100" width="470" height="597" backcolor="#E205FF" uuid="f5ad41b7-033b-44a8-883a-bb69065bc838"/>
+			</rectangle>
+		</band>
 	</background>
 	<title>
 		<band height="79" splitType="Stretch">
@@ -117,78 +112,65 @@
 	<pageHeader>
 		<band height="46" splitType="Stretch">
 			<staticText>
-				<reportElement x="211" y="16" width="100" height="30" uuid="c770cf4c-4f67-47ab-9333-cfb19d98b0fe"/>
-				<text><![CDATA[page title]]></text>
+				<reportElement x="60" y="0" width="470" height="30" uuid="c770cf4c-4f67-47ab-9333-cfb19d98b0fe"/>
+				<textElement textAlignment="Center">
+					<font size="14" isBold="true"/>
+				</textElement>
+				<text><![CDATA[my page title]]></text>
 			</staticText>
 		</band>
 	</pageHeader>
 	<columnHeader>
 		<band height="30" splitType="Stretch">
 			<staticText>
-				<reportElement x="71" y="0" width="100" height="30" uuid="157762d9-bdcc-43bf-9264-e3abca4b5e9d">
+				<reportElement x="1" y="0" width="100" height="30" uuid="157762d9-bdcc-43bf-9264-e3abca4b5e9d">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="6788ad40-bc57-49d2-9348-6c78d197c1c4"/>
 				</reportElement>
-				<text><![CDATA[fullname]]></text>
+				<text><![CDATA[fullname/email]]></text>
 			</staticText>
-			<staticText>
-				<reportElement x="210" y="0" width="100" height="30" uuid="f0e76ffe-9d42-4553-99d7-65c49ade81a5">
-					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="217ec77d-e498-4be1-a3ad-9e6731dc46d3"/>
-				</reportElement>
-				<text><![CDATA[email]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="334" y="0" width="100" height="30" uuid="1509a702-6547-4d50-8e62-4aced04ebeae">
-					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="bdfabbe3-ee49-4865-9bf7-4fd6b938f5be"/>
-				</reportElement>
-				<text><![CDATA[country_code]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="450" y="0" width="100" height="30" uuid="d20ea25b-e637-4489-a3fe-eb899f9cb354">
-					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="d15111b8-2f0a-499b-a844-62875b042cd8"/>
-				</reportElement>
-				<text><![CDATA[gender]]></text>
-			</staticText>
+			<textField>
+				<reportElement x="80" y="0" width="100" height="30" uuid="3164f3df-e6e3-41e7-a1c0-cce7458c3be1"/>
+				<textFieldExpression><![CDATA["begin"+$F{country_code}]]></textFieldExpression>
+			</textField>
 		</band>
 	</columnHeader>
 	<detail>
 		<band height="45" splitType="Stretch">
 			<textField>
-				<reportElement x="71" y="0" width="100" height="30" uuid="3edb30c4-7b3c-43f8-ab8f-a58d7b5487ac">
+				<reportElement x="2" y="0" width="100" height="30" uuid="3edb30c4-7b3c-43f8-ab8f-a58d7b5487ac">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="6788ad40-bc57-49d2-9348-6c78d197c1c4"/>
 					<property name="com.jaspersoft.studio.unit.y" value="px"/>
 				</reportElement>
 				<textFieldExpression><![CDATA[$F{fullname}]]></textFieldExpression>
 			</textField>
+		</band>
+		<band height="35">
 			<textField>
-				<reportElement x="210" y="0" width="100" height="30" uuid="1f0bf042-a29c-4fc4-bc86-a4280b72e6fa">
+				<reportElement x="4" y="5" width="100" height="30" uuid="1f0bf042-a29c-4fc4-bc86-a4280b72e6fa">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="217ec77d-e498-4be1-a3ad-9e6731dc46d3"/>
 					<property name="com.jaspersoft.studio.unit.y" value="px"/>
 				</reportElement>
 				<textFieldExpression><![CDATA[$F{email}]]></textFieldExpression>
 			</textField>
-			<textField>
-				<reportElement x="334" y="0" width="100" height="30" uuid="e1d9b280-5a0b-4350-8727-1dce007878ac">
-					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="bdfabbe3-ee49-4865-9bf7-4fd6b938f5be"/>
-					<property name="com.jaspersoft.studio.unit.y" value="px"/>
-				</reportElement>
-				<textFieldExpression><![CDATA[$F{country_code}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="450" y="0" width="100" height="30" uuid="b41b2fb5-f5d3-45d1-bb24-ce5738c6e76e">
-					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="d15111b8-2f0a-499b-a844-62875b042cd8"/>
-					<property name="com.jaspersoft.studio.unit.y" value="px"/>
-				</reportElement>
-				<textFieldExpression><![CDATA[$F{gender}]]></textFieldExpression>
-			</textField>
 		</band>
 	</detail>
 	<columnFooter>
-		<band height="45" splitType="Stretch"/>
+		<band height="45" splitType="Stretch">
+			<textField>
+				<reportElement x="40" y="0" width="100" height="30" uuid="3ccc22ac-be9f-4d5a-a9e0-fde6808f54da"/>
+				<textFieldExpression><![CDATA["end"+$F{country_code}]]></textFieldExpression>
+			</textField>
+		</band>
 	</columnFooter>
 	<pageFooter>
 		<band height="54" splitType="Stretch"/>
 	</pageFooter>
 	<summary>
-		<band height="42" splitType="Stretch"/>
+		<band height="50" splitType="Stretch">
+			<textField>
+				<reportElement x="280" y="10" width="100" height="30" uuid="c6c25902-b94d-4ff8-ad99-7adf34944b19"/>
+				<textFieldExpression><![CDATA["summary"]]></textFieldExpression>
+			</textField>
+		</band>
 	</summary>
 </jasperReport>
