support group to new page or new column

--- a/examples/example1.jrxml
+++ b/examples/example1.jrxml
@@ -56,7 +56,7 @@
 		<property name="com.jaspersoft.studio.field.label" value="country_code"/>
 		<property name="com.jaspersoft.studio.field.tree.path" value="global_user"/>
 	</field>
-	<group name="groupcountry_code">
+	<group name="groupcountry_code" isStartNewColumn="true" isStartNewPage="true" isReprintHeaderOnEachPage="true">
 		<groupExpression><![CDATA[$F{country_code}]]></groupExpression>
 		<groupHeader>
 			<band height="30">
