--- a/examples/multicolumn-vertical.jrxml
+++ b/examples/multicolumn-vertical.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.18.1.final using JasperReports Library version 6.18.1-9d75d1969e774d4f179fb3be8401e98a0e6d1611  -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="example1" columnCount="3" pageWidth="595" pageHeight="420" orientation="Landscape" columnWidth="185" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="51adeca7-9f15-46d6-b157-714028ffc1e5">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="example1" pageWidth="595" pageHeight="420" orientation="Landscape" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="51adeca7-9f15-46d6-b157-714028ffc1e5">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="postgres"/>
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
 	<property name="com.jaspersoft.studio.unit." value="pixel"/>
@@ -99,19 +99,28 @@
 		</band>
 		<band height="85">
 			<textField>
-				<reportElement x="0" y="0" width="120" height="60" isPrintWhenDetailOverflows="true" uuid="4b1f6450-8992-47bd-84c7-5481fd3c8368">
-					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="6788ad40-bc57-49d2-9348-6c78d197c1c4"/>
-					<property name="com.jaspersoft.studio.unit.y" value="px"/>
+				<reportElement x="10" y="10" width="100" height="30" uuid="5b454978-79ac-438e-85dc-bd26a2090f0c">
+					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="a63d9780-909f-4bfa-b006-749ecbf99fe5"/>
 				</reportElement>
-				<textFieldExpression><![CDATA["detail2"]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{globaluser_id}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="20" y="50" width="100" height="30" uuid="770ae381-4a49-419f-af24-ee7d307e5d51">
+					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="34d8c44c-bbda-4075-9d71-1bffcfe179ce"/>
+				</reportElement>
+				<textFieldExpression><![CDATA[$F{globaluser_id}+ (2 +1)]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
 	<columnFooter>
-		<band height="45" splitType="Stretch">
+		<band height="53" splitType="Stretch">
 			<textField>
 				<reportElement x="40" y="0" width="100" height="30" uuid="3ccc22ac-be9f-4d5a-a9e0-fde6808f54da"/>
 				<textFieldExpression><![CDATA["end column footer"]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="40" y="23" width="100" height="30" uuid="297aba62-dd7b-4f2b-8095-caaacd047921"/>
+				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 		</band>
 	</columnFooter>
