--- a/examples/example1.jrxml
+++ b/examples/example1.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.18.1.final using JasperReports Library version 6.18.1-9d75d1969e774d4f179fb3be8401e98a0e6d1611  -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="example1" columnCount="2" printOrder="Horizontal" pageWidth="595" pageHeight="842" columnWidth="277" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="51adeca7-9f15-46d6-b157-714028ffc1e5">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="example1" printOrder="Horizontal" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="51adeca7-9f15-46d6-b157-714028ffc1e5">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="postgres"/>
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
 	<queryString>
@@ -56,140 +56,81 @@
 		<property name="com.jaspersoft.studio.field.label" value="country_code"/>
 		<property name="com.jaspersoft.studio.field.tree.path" value="global_user"/>
 	</field>
-	<group name="groupcountry_code">
-		<groupExpression><![CDATA[$F{country_code}]]></groupExpression>
-		<groupHeader>
-			<band height="30">
-				<textField>
-					<reportElement x="0" y="0" width="100" height="30" uuid="27c953f2-73e7-488d-9a4c-ebe99d317f65"/>
-					<textFieldExpression><![CDATA[$F{country_code}]]></textFieldExpression>
-				</textField>
-			</band>
-		</groupHeader>
-		<groupFooter>
-			<band height="50">
-				<textField>
-					<reportElement x="40" y="0" width="100" height="30" uuid="85554e7c-b59b-4bf7-9e7c-f9d5b41475be"/>
-					<textFieldExpression><![CDATA["end"+$F{country_code}]]></textFieldExpression>
-				</textField>
-			</band>
-		</groupFooter>
-	</group>
-	<group name="group_gender">
-		<groupExpression><![CDATA[$F{gender}]]></groupExpression>
-		<groupHeader>
-			<band height="40">
-				<textField>
-					<reportElement x="30" y="0" width="100" height="30" uuid="f8924907-c299-4abb-b447-dbc47184f846"/>
-					<textFieldExpression><![CDATA[$F{gender}]]></textFieldExpression>
-				</textField>
-			</band>
-		</groupHeader>
-		<groupFooter>
-			<band height="50">
-				<textField>
-					<reportElement x="40" y="0" width="100" height="30" uuid="df613656-f6ba-4860-9085-abe7165cb383"/>
-					<textFieldExpression><![CDATA["end "+$F{gender}]]></textFieldExpression>
-				</textField>
-			</band>
-		</groupFooter>
-	</group>
-	<background>
-		<band height="802" splitType="Stretch">
-			<rectangle>
-				<reportElement x="60" y="100" width="470" height="597" backcolor="#E205FF" uuid="f5ad41b7-033b-44a8-883a-bb69065bc838"/>
-			</rectangle>
-		</band>
-	</background>
-	<title>
-		<band height="79" splitType="Stretch">
-			<staticText>
-				<reportElement x="401" y="16" width="100" height="30" uuid="f14587d4-8884-4eaa-94cf-97fe0526b47d"/>
-				<text><![CDATA[title]]></text>
-			</staticText>
-		</band>
-	</title>
-	<pageHeader>
-		<band height="46" splitType="Stretch">
-			<staticText>
-				<reportElement x="60" y="0" width="470" height="30" uuid="c770cf4c-4f67-47ab-9333-cfb19d98b0fe"/>
-				<textElement textAlignment="Center">
-					<font size="14" isBold="true"/>
-				</textElement>
-				<text><![CDATA[my page title]]></text>
-			</staticText>
-		</band>
-	</pageHeader>
-	<columnHeader>
-		<band height="30" splitType="Stretch">
-			<staticText>
-				<reportElement x="1" y="0" width="100" height="30" uuid="157762d9-bdcc-43bf-9264-e3abca4b5e9d">
-					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="6788ad40-bc57-49d2-9348-6c78d197c1c4"/>
-				</reportElement>
-				<text><![CDATA[fullname/email]]></text>
-			</staticText>
-			<textField>
-				<reportElement x="80" y="0" width="100" height="30" uuid="3164f3df-e6e3-41e7-a1c0-cce7458c3be1"/>
-				<textFieldExpression><![CDATA["begin"+$F{country_code}]]></textFieldExpression>
-			</textField>
-		</band>
-	</columnHeader>
 	<detail>
-		<band height="45" splitType="Stretch">
+		<band height="802" splitType="Stretch">
 			<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.FreeLayout"/>
 			<textField>
-				<reportElement x="20" y="0" width="100" height="45" uuid="3edb30c4-7b3c-43f8-ab8f-a58d7b5487ac">
-					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="6788ad40-bc57-49d2-9348-6c78d197c1c4"/>
-					<property name="com.jaspersoft.studio.unit.y" value="px"/>
+				<reportElement mode="Opaque" x="90" y="0" width="465" height="20" forecolor="#FFFFFF" backcolor="#1205FF" uuid="9d37d0b4-6a5a-4dbe-a57a-9e0b1fa6e3df">
+					<printWhenExpression><![CDATA[$F{country_code}=="MY"]]></printWhenExpression>
 				</reportElement>
+				<box>
+					<pen lineWidth="2.25" lineStyle="Dashed" lineColor="#FFFFFF"/>
+					<topPen lineColor="#05FF05"/>
+					<leftPen lineWidth="1.0" lineStyle="Dotted" lineColor="#FF0537"/>
+					<bottomPen lineColor="#05FF05"/>
+					<rightPen lineWidth="1.0" lineStyle="Dotted" lineColor="#FF0537"/>
+				</box>
+				<textElement>
+					<font fontName="Arial Black" size="12" isBold="true" isItalic="true"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{fullname}]]></textFieldExpression>
 			</textField>
-		</band>
-		<band height="35">
 			<textField>
-				<reportElement x="4" y="5" width="100" height="30" uuid="1f0bf042-a29c-4fc4-bc86-a4280b72e6fa">
-					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="217ec77d-e498-4be1-a3ad-9e6731dc46d3"/>
-					<property name="com.jaspersoft.studio.unit.y" value="px"/>
+				<reportElement x="0" y="0" width="80" height="20" uuid="641dffef-f501-4ae8-b8f4-080539d8db5a"/>
+				<box topPadding="8" leftPadding="8" bottomPadding="8" rightPadding="8">
+					<pen lineWidth="0.0" lineStyle="Double" lineColor="#09FF05"/>
+					<topPen lineWidth="1.0" lineStyle="Double" lineColor="#09FF05"/>
+					<leftPen lineWidth="1.0" lineStyle="Double" lineColor="#09FF05"/>
+					<bottomPen lineWidth="1.0" lineStyle="Double" lineColor="#09FF05"/>
+					<rightPen lineWidth="1.0" lineStyle="Double" lineColor="#09FF05"/>
+				</box>
+				<textFieldExpression><![CDATA[$V{REPORT_COUNT}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="0" y="35" width="555" height="30" uuid="c5786b1c-50a5-46be-bb71-11c8258df1bd">
+					<printWhenExpression><![CDATA[$F{email}=="kstan@simitgroup.com"]]></printWhenExpression>
 				</reportElement>
+				<textElement textAlignment="Center">
+					<font fontName="Bradley Hand" size="19" isBold="false"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{email}]]></textFieldExpression>
 			</textField>
+			<line>
+				<reportElement key="aa" x="0" y="80" width="550" height="1" uuid="2309a4ae-91f0-4785-aec8-cda41da75eea">
+					<property name="com.jaspersoft.studio.element.name" value="aaa"/>
+				</reportElement>
+				<graphicElement>
+					<pen lineWidth="1.0" lineColor="#FF0516"/>
+				</graphicElement>
+			</line>
+			<line>
+				<reportElement x="5" y="95" width="550" height="1" uuid="9fcf499a-0623-406d-a390-530a6002a34b"/>
+				<graphicElement>
+					<pen lineWidth="2.0" lineStyle="Dashed" lineColor="#270AFF"/>
+				</graphicElement>
+			</line>
+			<line>
+				<reportElement x="0" y="115" width="550" height="1" uuid="1066ef5f-931b-4b37-9ee7-a1f91c867520"/>
+				<graphicElement>
+					<pen lineWidth="5.0" lineStyle="Double" lineColor="#EF0FFF"/>
+				</graphicElement>
+			</line>
+			<line>
+				<reportElement x="1" y="140" width="550" height="1" uuid="0481e91c-6e33-48d7-b339-6f58d3113636">
+					<property name="com.jaspersoft.studio.element.name" value="line label"/>
+				</reportElement>
+				<graphicElement>
+					<pen lineWidth="7.0" lineStyle="Dotted" lineColor="#05FF2B"/>
+				</graphicElement>
+			</line>
+			<image>
+				<reportElement x="10" y="187" width="160" height="123" uuid="4afc3ddf-099e-4478-8e81-ea8acf4bcd84"/>
+				<imageExpression><![CDATA["https://tinyjpg.com/images/social/website.jpg"]]></imageExpression>
+			</image>
+			<image>
+				<reportElement x="264" y="199" width="50" height="50" uuid="d383247b-4542-4180-be91-abe2b24b4c76"/>
+				<imageExpression><![CDATA["https://tinyjpg.com/images/social/website.jpg"]]></imageExpression>
+			</image>
 		</band>
 	</detail>
-	<columnFooter>
-		<band height="45" splitType="Stretch">
-			<textField>
-				<reportElement x="40" y="0" width="100" height="30" uuid="3ccc22ac-be9f-4d5a-a9e0-fde6808f54da"/>
-				<textFieldExpression><![CDATA["end column footer"]]></textFieldExpression>
-			</textField>
-		</band>
-	</columnFooter>
-	<pageFooter>
-		<band height="54" splitType="Stretch">
-			<staticText>
-				<reportElement x="347" y="15" width="100" height="30" uuid="497511dc-e37a-4f6b-b178-9e981731e30b"/>
-				<text><![CDATA[page footer, continue next==>]]></text>
-			</staticText>
-		</band>
-	</pageFooter>
-	<lastPageFooter>
-		<band height="53">
-			<staticText>
-				<reportElement x="330" y="20" width="100" height="30" uuid="07876ae9-b40f-4a2e-a886-7e8a581907d3"/>
-				<text><![CDATA[last page footer]]></text>
-			</staticText>
-		</band>
-	</lastPageFooter>
-	<summary>
-		<band height="80" splitType="Stretch">
-			<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.spreadsheet.SpreadsheetLayout"/>
-			<textField>
-				<reportElement x="0" y="0" width="300" height="40" uuid="c6c25902-b94d-4ff8-ad99-7adf34944b19"/>
-				<textFieldExpression><![CDATA["summary"]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="310" y="40" width="245" height="40" uuid="f542e92b-6618-43d3-8032-45684301c8b7"/>
-				<textFieldExpression><![CDATA["summary end"]]></textFieldExpression>
-			</textField>
-		</band>
-	</summary>
 </jasperReport>
